# CMake-Introduction-to-basics

./: README.md
GetGreetings/: CMakeLists.txt
HelloWorld/: CMakeLists.txt  Main.cc
executable/: CMakeLists.txt
shared-library/: CMakeLists.txt  GetGreetings.cc  Main.cc
static-library/: CMakeLists.txt  GetGreetings.cc  Main.cc
